# eye-tracking-diploma

./: .gitignore  README.md
cpp/: CMakeLists.txt  main.cpp
cpp/connect/: CalibrationWindow.h  FaceTracker.h  FrameSaver.h  Preprocessing.h
cpp/src/: CalibrationWindow.cpp  FaceTracker.cpp  FrameSaver.cpp  HeatmapOverlay.cpp  HeatmapUtils.cpp  Preprocessing.cpp
cpp/ui/: HeatmapOverlay.h  HeatmapUtils.h  MouseOnlyButton.h  PredictionPointOverlay.h
cpp/zmq/: GazeForwarder.cpp  ZmqCommandReceiver.cpp  ZmqController.cpp  ZmqGazeReceiver.cpp  ZmqPythonAckReceiver.cpp  ZmqPythonCommander.cpp  ZmqSender.cpp  ZmqStreamer.cpp
cpp/zmqConnect/: CommandType.h  GazeData.h  GazeForwarder.h  ZmqCommandReceiver.h  ZmqController.h  ZmqGazeReceiver.h  ZmqPythonAckReceiver.h  ZmqPythonCommander.h  ZmqSender.h  ZmqStreamer.h  sendExitCalibration.h
game/: build.gradle
game/assets/: assets.txt
game/core/: build.gradle
game/core/src/main/java/com/mygdx/game/: CalibrationSender.java  GameScreen.java  GazeGame.java  GazeReceiver.java  MainMenuScreen.java
game/lwjgl3/src/main/java/com/mygdx/game/lwjgl3/: Lwjgl3Launcher.java
python/: data.py  inference.py  main.py  plot_error_distribution.py  predictions_one_example.py  requirements.txt  visualize_predictions.py  worst-case.py
python/experiments/: experiment_1.py  experiment_2.py  experiment_3.py  experiment_4.py  experiment_5.py  experiment_6.py  experiment_6V2.py
python/training_logs/training_results_1/20250511_045449/: config.txt
python/training_logs/training_results_2/20250511_122602/: config.txt
python/training_logs/training_results_4/20250511_182249/: config.txt
python/training_logs/training_results_5/20250511_212156/: config.txt
python/training_logs/training_results_6/20250513_032649/: config.txt
python/training_logs/training_results_6V2/20250512_124019/: config.txt
